# BB-stack

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  Vagrantfile  qtcreator  run_build.sh  run_unitTests.sh  setup_env.sh  setup_ide.sh
include/sensors/: senormessages.h  sensor-template.h
include/sensors/imu/: imu.h  mpu9150-registers.h  mpu9150.h
lib/: CMakeLists.txt
lib/HAL/: CMakeLists.txt  HALInterface.h  halfactory.cpp  halfactory.h  halmock.h
lib/HAL/BlackLibWrapper/: CMakeLists.txt  blacklibwrapper.cpp  blacklibwrapper.h
lib/MadgwickAHRS/: MadgwickAHRS.c
lib/sensors/: CMakeLists.txt  senormessages.h  sensor-messages.h  sensor-template.h
lib/sensors/imu/: imu.cpp  imu.h
lib/sensors/imu/mpu9250/: mpu9250-registers.h  mpu9250.cpp  mpu9250.h
sim/: Dockerfile  run_visualOdometry.sh  simulateIMU.py  visualOdometrySIM.py
src/: CMakeLists.txt
src/blackLibIMUTest/: CMakeLists.txt
src/blackLibIMUTest/ahrsTest/: CMakeLists.txt  main.cpp
src/blackLibIMUTest/mpuCalibrationTest/: CMakeLists.txt  main.cpp
src/blackLibIMUTest/readIMUTest/: CMakeLists.txt  main.cpp
src/zmqTests/: CMakeLists.txt
src/zmqTests/build-hellozmq-Beagle_Bone-Default/: Project  Project.cbp
src/zmqTests/build-hellozmq-client-Beagle_Bone-Default/: Project.cbp  hello-zmq-client
src/zmqTests/hellozmq-client/: CMakeLists.txt
src/zmqTests/hellozmq-server/: CMakeLists.txt  main.cpp
src/zmqTests/multiThreadTest/: CMakeLists.txt
test/: CMakeLists.txt
test/sensor/: CMakeLists.txt  sensor.cpp
test/sensor/imu/: imuTest.cpp  imuTest.h
